# ai

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  docs-production.yml  docs-staging.yml  docs.yml  pylint.yml  pytest.yml
ai/: __init__.py
ai/boolalg/: __init__.py  logic.py
ai/correlation/: __init__.py  pearson.py
ai/linear_model/: __init__.py  linear.py  linear_regression.py  logistic.py  perceptron.py
ai/mathematical_functions/: __init__.py  arithmetic_operations.py
ai/ml/: Machine_Learning.ipynb
ai/ml /: Machine_Learning.ipynb
ai/naive_bayes/: __init__.py  naive_bayes.py
ai/neighbors/: __init__.py  knn.py
ai/prework/: Pandas_DataFrame.ipynb  Problem_Framing.ipynb
ai/search/: __init__.py  frontiers.py
ai/stats/: __init__.py  _core.py  correlation.py  stats.py
ai/svm/: __init__.py  classes.py  kernels.py
algos/: index.html
algos/correlation/: index.html
api/boolalg/: index.html
api/linear_model/: index.html
api/naive_bayes/: index.html
api/neighbors/: index.html
api/search/: index.html
api/stats/: index.html
css/: extra.css
deep-learning-roadmap/: index.html
docs/: deep-learning-roadmap.md  index.md  roadmap.md
hooks/: notebooks.py
ml/: index.html
prework/: index.html
resource/: index.html
scripts/: generatedocs.py  spellchecker.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
templates/: custom.css  module.html.jinja2
tools/: generate_dl_roadmap.py  manage.py
(+601 files in other folders)
